--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# .DS_Store files!
+.DS_Store
+
+# pkgs in our build directory
+build/*.pkg
+
 # User-specific files
 *.suo
 *.user
